[tool.poetry]
name = "s3-cache"
version = "0.1.0"
description = "S3 file caching utility"
authors = ["Raffael Strassnig <raffael.strassnig@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["s3", "cache", "file", "caching", "utility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
boto3 = "^1.34.0"
s3fs = "^2024.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 